# ros2_profiling

./: .gitignore  README.md
ros2_profiling_demo/: CMakeLists.txt  demo.repos  package.xml  tracecompass.md
ros2_profiling_demo/analysis/: MCAP Analysis.ipynb
ros2_profiling_demo/config/: reference_system.yaml
ros2_profiling_demo/scripts/: profile_graph_summary.py
ros2_profiling_demo/test/: conftest.py  test_event_seq.py  test_graph.py  test_profile.py
ros2profile/: package.xml  setup.py
ros2profile/config/: reference_system.yaml
ros2profile/ros2profile/api/: __init__.py  launch.py  process.py  run_test.py
ros2profile/ros2profile/command/: __init__.py  profile.py
ros2profile/ros2profile/data/: __init__.py  callback.py  constants.py  context.py  event.py  event_sequence.py  graph.py  graph_entity.py  node.py  publisher.py  service.py  subscription.py  timer.py  topic.py  utils.py
ros2profile/ros2profile/data/convert/: ctf.py
ros2profile/ros2profile/verb/: __init__.py  launch.py  process.py  run_test.py
ros2profile/test/: conftest.py  test_copyright.py  test_flake8.py  test_graph.py  test_mypy.py  test_profile.py
