<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_profiling_demo</name>
  <version>0.0.1</version>
  <description>Examples and demonstrations of using ros2profile</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2profile</depend>
  <depend>reference_system</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
